[package]
name = "fnhook"
version = "0.1.0"
edition = "2021"
description = "A simple, batteries-included way of hooking standard library functions on macOS"
license = "MIT"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
data-encoding = "2.5.0"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
libc = "0.2.151"
libproc = "0.14.2"
mach2 = "0.4.2"
mach_object = "0.1.17"
nom = "7.1.3"
system_error = "0.1.1"
